fixed overflowing text

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -134,6 +134,7 @@ input:focus + .slider {
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
   text-align: center;
   transition: 0.5s ease;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .projects-header {
   color: var(--text-color);
